# praviel

./: .dockerignore  .editorconfig  .env.docker  .flutter-plugins  .flutter-plugins-dependencies  .gitattributes  .gitignore  .gitleaksignore  .prakteros_authorized  .pre-commit-config.yaml  AGENTS.md  API_AUDIT_REPORT.md  APP_ACTUALLY_WORKS.md  BIG-PICTURE_PROJECT_PLAN.md  BIG_PICTURE.md  BUG_FIX_REPORT.md  BUG_FIX_VERIFICATION.md  BYOK_SPLIT_PLAN.md  BYOK_VERIFICATION_REPORT.md  Blueprint.md  CHANGELOG.md  CI_STATUS_REPORT.md  CI_WORKFLOWS_UPDATE_NEEDED.md  CLAUDE.md  CONTRIBUTING.md  CRITICAL_REVIEW_NO_BS.md  DOCKER_FINAL_REVIEW.md  DONATION_SETUP_GUIDE.md  Dockerfile  FEATURES.md  FINAL_COMPLETION_REPORT.md  FINAL_REPORT_OCTOBER_2025.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FINAL_TESTING_REPORT.md  GETTING_STARTED.md  HONEST_ASSESSMENT.md  HONEST_FINAL_ASSESSMENT.md  HONEST_FINAL_REPORT.md  HOW_TO_BUILD.MD  (+65 more)
.claude/: settings.example.json  settings.local.json  test_e2e.ps1  test_git.ps1  test_minimal.ps1  test_pipe.ps1  test_simplified.ps1
.dart_tool/: package_config.json  package_config_subset
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml
backend/: .env.example  alembic.ini  check_routes.py  list_all_langs.py  main.py  nul  pytest.ini  requirements.txt  setup_test_db.py  test_api_comprehensive.py  test_lesson_generation.py  test_preview_direct.py  test_quest_flow_real.py  test_quest_schema.py  test_xml_parse.py
data/: DATA_README.md
docs/: ACCURACY.md  ADAPTIVE_DIFFICULTY_SYSTEM.md  AI_AGENT_GUIDELINES.md  AI_AGENT_PROTECTION.md  AI_AGENT_PROTECTION_SUMMARY.md  ANTI_DOWNGRADE_SAFEGUARDS.md  API_EXAMPLES.md  API_REFERENCE.md  AUTHENTICATION.md  BACKEND_API_INTEGRATION.md  BENCHMARKS.md  BYOK.md  BYOK_SETUP.md  CHATBOT.md  CHROMEDRIVER.md  COACH.md  CRITICAL_TO-DOs.md  DAILY_CHALLENGES_COMPLETE.md  DATABASE_MIGRATIONS.md  DATA_POLICY.md  DB_RUNBOOK.md  DEMO.md  DEVELOPMENT.md  DOCKER.md  EMAIL_ADDRESS_SETUP.md  EMAIL_IMPLEMENTATION_SUMMARY.md  EMAIL_MARKETING.md  EMAIL_TESTING_GUIDE.md  ENGAGEMENT_BOOST_IMPLEMENTATION.md  ENGAGEMENT_MECHANICS_COMPLETE.md  EXTERNAL_LIBRARIES.md  FLUTTER.md  FUTURE_FEATURES.md  GAMIFICATION_QUICK_START.md  HOSTING.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_LIST.md  LANGUAGE_WRITING_RULES.md  LESSONS.md  MORPHOLOGY_INGESTION.md  (+33 more)
lib/: home_screen.dart  main.dart  material.dart
linux/: CMakeLists.txt  my_application.cc
scripts/: build_flutter_web.ps1  check_daily_texts.py  db_up.ps1  download_perseus_corpus.sh  fetch_data.ps1  fetch_data.sh  ingest_iliad_sample.py  load_test.py  reset_db.ps1  sync_language_order.py  test_validation_protection.py  validate_api_payload_structure.py  validate_no_model_downgrades.py  validate_october_2025_apis.py  verify_migrations.py
test/: widget_test.dart
tests/: test_api_search.py  test_mvp_vertical_slice.py  test_normalize.py  test_search_trgm_demo.py
tools/: get_ssh_pass.ps1  git_askpass.cmd  never_stuck.ps1  precommit_gate.ps1  set_ssh_pass.ps1  unlock_ssh.ps1  unlock_ssh.sh  vulture_whitelist.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+927 files in other folders)
