[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ancient-languages"
version = "0.1.0"
description = "AncientLanguages toolkit (MVP ingest and normalization)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AncientLanguages Team" }]
dependencies = [
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest>=8",
    "ruff>=0.3",
]

[project.scripts]
ancient-mvp = "pipeline.perseus_ingest:main"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"backend/migrations/env.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/app/tests", "tests"]
# optional:
# addopts = "-q"
